Fixed a broken link

--- a/word_sequence_timer.html
+++ b/word_sequence_timer.html
@@ -10,7 +10,7 @@
     timeleft--;
     document.getElementById("countdowntimer").textContent = timeleft;
     if(timeleft <= 0)
-        window.location='words_chooser.html';
+        window.location='word_chooser.html';
     },1000);
 	</script>
     <div id="background"><br>
